objects/copado__TestType__mdt.object
<CustomObject>
    <fields>
        <fullName>copado__Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__ExecuteVia__c</fullName>
        <label>ExecuteVia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Namespace__c</fullName>
        <label>Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Tool__c</fullName>
        <label>Tool</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Test Type</label>
    <pluralLabel>Test Types</pluralLabel>
</CustomObject>